# InferenceTemplate

./: .gitignore  README.md
function_inference/: CMakeLists.txt  Dockerfile  main.c  main.cc  makefile
function_inference/models/: models.cc  models.h  yolov8.cc
server_inference/: Dockerfile
